# GPT-Adventure

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt
adventure/: __main__.py  credentials.py
templates/: index.html
