[project]
name = "gpt_adventure"
version = "0.0.1"
authors = [
  { name="Johnathan Irvin" },
]
description = "An adventure game using ChatGPT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JohnnyIrvin/GPT-Adventure"
"Bug Tracker" = "https://github.com/JohnnyIrvin/GPT-Adventure/issues"
